Style: fix episodes list overflowing on watch view

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  @apply w-[10px];
+  @apply w-[10px] h-[10px];
 }
 
 ::-webkit-scrollbar-track {
